bugfix: Correct menu_icon color issue on iPhone devices

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -30,8 +30,6 @@
 */
 
 .logo {
-  height: 21px;
-  width: 77px;
   margin-right: auto;
 }
 
@@ -119,6 +117,10 @@
   cursor: pointer;
 }
 
+.menuIcon svg {
+  stroke: var(--cl-primary-900);
+}
+
 .overflowHidden {
   overflow: hidden;
 }
@@ -160,6 +162,7 @@
   }
 
   .iconsList {
+    color: var(--cl-primary-900);
     gap: 24px;
   }
 
